Server compilation fixes.

--- a/code_src/dlls/CMakeLists.txt
+++ b/code_src/dlls/CMakeLists.txt
@@ -24,13 +24,13 @@ cmake_minimum_required(VERSION 2.6.0)
 project (PARANOIA_DLL)
 
 # set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
-set (CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -w -Wl,--no-undefined -ggdb")
+set (CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -Wno-write-strings -Wno-conversion-null -Wl,--no-undefined -ggdb")
 set (CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 set (CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -O3")
 set (CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -Os")
 set (CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -ggdb -O3")
 
-set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -static-libstdc++")
+set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
 set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ")
 set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
 set (CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} ")
@@ -49,8 +49,6 @@ endif()
 set (PARANOIA_DLL_SHARED "paranoia" )
 
 set (PARANOIA_DLL_SRC
-activity.h
-activitymap.h
 aflock.cpp
 agrunt.cpp
 AI_BaseNPC_Schedule.cpp
@@ -58,46 +56,30 @@ airtank.cpp
 alias.cpp
 animating.cpp
 animation.cpp
-animation.h
 apache.cpp
 barnacle.cpp
 barney.cpp
-basemonster.h
 bigmomma.cpp
 bloater.cpp
 bmodels.cpp
 bullsquid.cpp
 buttons.cpp
 cbase.cpp
-cbase.h
-cdll_dll.h
 client.cpp
-client.h
 combat.cpp
 controller.cpp
 crossbow.cpp
 crowbar.cpp
-decals.h
 defaultai.cpp
-defaultai.h
 doors.cpp
-doors.h
 effects.cpp
-effects.h
 egon.cpp
-enginecallback.h
 explode.cpp
-explode.h
-extdll.h
 flyingmonster.cpp
-flyingmonster.h
 func_break.cpp
-func_break.h
 func_tank.cpp
 game.cpp
-game.h
 gamerules.cpp
-gamerules.h
 gargantua.cpp
 gauss.cpp
 genericmonster.cpp
@@ -105,42 +87,34 @@ ggrenade.cpp
 globals.cpp
 gman.cpp
 h_ai.cpp
-handgrenade.cpp
-hassassin.cpp
 h_battery.cpp
 h_cine.cpp
 h_cycler.cpp
+h_export.cpp
+handgrenade.cpp
+hassassin.cpp
 headcrab.cpp
 healthkit.cpp
-h_export.cpp
 hgrunt.cpp
 hornet.cpp
 hornetgun.cpp
-hornet.h
 houndeye.cpp
 ichthyosaur.cpp
 islave.cpp
 items.cpp
-items.h
 leech.cpp
 lights.cpp
 locus.cpp
-locus.h
 maprules.cpp
-maprules.h
-monsterevent.h
 monstermaker.cpp
 monsters.cpp
-monsters.h
 monsterstate.cpp
 mortar.cpp
 movewith.cpp
-movewith.h
 mp5.cpp
 multiplay_gamerules.cpp
 nihilanth.cpp
 nodes.cpp
-nodes.h
 osprey.cpp
 paranoia_ak47.cpp
 paranoia_aks.cpp
@@ -153,61 +127,89 @@ paranoia_shotgun.cpp
 paranoia_turret.cpp
 paranoia_val.cpp
 paranoia_wpn.cpp
-paranoia_wpn.h
 pathcorner.cpp
 plane.cpp
-plane.h
 plats.cpp
 player.cpp
-player.h
-playermonster.cpp
+../pm_shared/pm_debug.c
+../pm_shared/pm_math.c
+../pm_shared/pm_shared.c
 python.cpp
 roach.cpp
 rpg.cpp
-rushscript.h
 satchel.cpp
-saverestore.h
-schedule.h
 scientist.cpp
 scripted.cpp
-scripted.h
-scriptevent.h
-#shotgun.cpp
 singleplay_gamerules.cpp
 skill.cpp
-skill.h
 sound.cpp
 soundent.cpp
-soundent.h
 spectator.cpp
-spectator.h
-squad.h
 squadmonster.cpp
-squadmonster.h
 squeakgrenade.cpp
-stats.cpp
 subs.cpp
 talkmonster.cpp
-talkmonster.h
 teamplay_gamerules.cpp
-teamplay_gamerules.h
 tempmonster.cpp
 tentacle.cpp
-trains.h
 triggers.cpp
 tripmine.cpp
 turret.cpp
 util.cpp
-util.h
-vector.h
+../game_shared/voice_gamemgr.cpp
 weapons.cpp
-weapons.h
 world.cpp
 xen.cpp
 zombie.cpp
-../pm_shared/pm_shared.c 
-../pm_shared/pm_math.c
-../pm_shared/pm_debug.c
+activity.h
+activitymap.h
+animation.h
+basemonster.h
+cbase.h
+cdll_dll.h
+client.h
+decals.h
+defaultai.h
+doors.h
+effects.h
+../engine/eiface.h
+enginecallback.h
+explode.h
+extdll.h
+flyingmonster.h
+func_break.h
+gamerules.h
+hornet.h
+items.h
+locus.h
+monsterevent.h
+monsters.h
+movewith.h
+nodes.h
+paranoia_wpn.h
+plane.h
+player.h
+../pm_shared/pm_debug.h
+../pm_shared/pm_defs.h
+../pm_shared/pm_info.h
+../pm_shared/pm_materials.h
+../pm_shared/pm_movevars.h
+../pm_shared/pm_shared.h
+rushscript.h
+saverestore.h
+schedule.h
+scripted.h
+scriptevent.h
+skill.h
+soundent.h
+spectator.h
+squadmonster.h
+talkmonster.h
+teamplay_gamerules.h
+trains.h
+util.h
+vector.h
+weapons.h
 )
 
 include_directories (
@@ -219,8 +221,8 @@ include_directories (
 	../game_shared/
 	../public/)
 add_library (${PARANOIA_DLL_SHARED} SHARED ${PARANOIA_DLL_SRC})
-add_definitions( -DLINUX -D_LINUX -D_DEBUG  -D_CS16CLIENT_ALLOW_SPECIAL_SCRIPTING
-	-Dstricmp=strcasecmp -D_strnicmp=strncasecmp -Dstrnicmp=strncasecmp )
+add_definitions( -DLINUX -D_LINUX -Dstricmp=strcasecmp -D_strnicmp=strncasecmp -Dstrnicmp=strncasecmp )
+#add_defintions( -DUSE_VOICEGAMEMGR )
 target_link_libraries( ${PARANOIA_DLL_SHARED} ${CMAKE_DL_LIBS})
 
 set_target_properties (${PARANOIA_DLL_SHARED} PROPERTIES
