--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="su.xash.paranoia"
-	android:versionCode="0"
-	android:versionName="1.2">
+	android:versionCode="1"
+	android:sharedUserId="in.celest.xash3d.hl.sharedUid"
+	android:versionName="1.2.3">
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="23"/>
 	<application android:label="@string/app_name"
 		android:debuggable="false"
@@ -25,18 +26,8 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>-->
-		<receiver android:name=".InstallReceiver">
-			<intent-filter android:priority="100">
-				<category android:name="android.intent.category.DEFAULT" />
-				<action android:name="android.intent.action.PACKAGE_ADDED"  />
-				<action android:name="android.intent.action.PACKAGE_CHANGED" />
-				<action android:name="android.intent.action.PACKAGE_INSTALL" />
-				<action android:name="android.intent.action.PACKAGE_REMOVED" />
-				<action android:name="android.intent.action.PACKAGE_REPLACED" />
-				<data android:scheme="package" />
-			</intent-filter>
-		</receiver>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest> 
