--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -5,28 +5,42 @@
 	android:versionName="1.2.3">
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="23"/>
 	<application android:label="@string/app_name"
+		android:icon="@drawable/ic_launcher"
+		android:allowBackup="true"
 		android:debuggable="false"
-		android:icon="@drawable/ic_launcher">
-	<!--<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />-->
-		<activity android:name=".LauncherActivity"
+		android:hardwareAccelerated="true">
+		
+		<activity android:name="in.celest.xash3d.LauncherActivity"
 			android:label="@string/app_name"
-			android:windowSoftInputMode="stateHidden">
+			android:windowSoftInputMode="adjustResize"
+			android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|screenLayout|fontScale|uiMode|orientation|screenSize|smallestScreenSize">
 			<intent-filter>
+				<action android:name="in.celest.xash3d.LauncherActivity"/>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<!--<activity android:name=".ShortcutActivity"
-			android:label="@string/text_shortcut"
-			android:theme="@android:style/Theme.Dialog"
-			android:windowSoftInputMode="adjustResize">
-			<intent-filter>
-				<action android:name="android.intent.action.CREATE_SHORTCUT" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>-->
+		
+		<activity android:name="in.celest.xash3d.XashActivity"
+			android:screenOrientation="sensorLandscape"
+			android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|screenLayout|fontScale|uiMode|orientation|screenSize|smallestScreenSize"
+			android:label="@string/app_name"
+			android:launchMode="singleTask">
+		</activity> 
+		<service android:name="in.celest.xash3d.XashService" android:stopWithTask="false" />
+		<receiver android:name="in.celest.xash3d.XashService$exitButtonListener" />
 	</application>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+	<!-- Some devices with Android 2.2 should support native activity, it was in unstable hidden API -->
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="23" />
+
+	<!-- OpenGL ES 1.1 -->
+	<uses-feature android:glEsVersion="0x00010000" /> 
+
+	<!-- Permissions -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 </manifest> 
